--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <script src="./js/script-1" type="module"></script>
+    <h2>Array</h2>
+    <script src="./js/script-1"></script>
+    <h2>Object</h2>
+    <script src="./js/script-mod-3-1"></script>
+    <h2>Деструктуризация.</h2>
+    <p>script-mod-3-2</p>
+    <script src="./js/script-mod-3-2"></script>
+    <h3>Продуктовая карта из видео Репеты, модуль3 занятие6</h3>
+    <p>repeta-product-card</p>
+    <!-- <script src="./js/repeta-product-card"></script> -->
   </body>
 </html>
