--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <h3>Продуктовая карта из видео Репеты, модуль3 занятие6</h3>
     <p>repeta-product-card</p>
     <!-- <script src="./js/repeta-product-card"></script> -->
+    <script src="./js/script-mod-4-1"></script>
   </body>
 </html>
