--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <h3>Продуктовая карта из видео Репеты, модуль3 занятие6</h3>
     <p>repeta-product-card</p>
     <!-- <script src="./js/repeta-product-card"></script> -->
-    <script src="./js/script-mod-4-1"></script>
+    <script src="./js/script-mod-4-1_2.js"></script>
+    <script src="./js/mod-4-autocheck.js"></script>
+    <script src="./js/mod-5.js"></script>
+    <script src="./js/mod-5-autocheck.js"></script>
   </body>
 </html>
