--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     <script src="./js/script-mod-3-2"></script>
     <h3>Продуктовая карта из видео Репеты, модуль3 занятие6</h3>
     <p>repeta-product-card</p>
+    <button type="button" class="js-btn">Click</button>
     <!-- <script src="./js/repeta-product-card"></script> -->
-    <script src="./js/script-mod-4-1_2.js"></script>
+    <!-- <script src="./js/script-mod-4-1_2.js"></script>
     <script src="./js/mod-4-autocheck.js"></script>
-    <script src="./js/mod-5.js"></script>
-    <script src="./js/mod-5-autocheck.js"></script>
+    <script src="./js/mod-5.js"></script> -->
+    <!-- <script src="./js/mod-5-autocheck.js"></script> -->
+    <!-- <script src="./js/recursion.js"></script> -->
+    <!-- <script src="./js/cool-use-reduce-and-other-tasks.js"></script> -->
+    <script src="./js/mod-6.js"></script>
   </body>
 </html>
