--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
     <button type="button" class="js-btn">Click</button>
     <!-- <script src="js/repeta-product-card.js"></script> -->
     <!-- <script src="js/script-mod-4-1_2.js"></script>
-    <script src="js/mod-4-autocheck.js"></script>
-    <script src="js/mod-5.js"></script> -->
+    <!-- <script src="js/mod-4-autocheck.js"></script> -->
+    <script src="js/mod-5.js"></script>
     <!-- <script src="js/mod-5-autocheck.js"></script> -->
     <!-- <script src="js/recursion.js"></script> -->
     <!-- <script src="js/cool-use-reduce-and-other-tasks.js"></script> -->
